added gallery images

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/nn/icon.png" rel="icon">
+  <link href="assets/img/nn/icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -38,8 +38,8 @@
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center me-auto">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">Pearl Medical</h1>
+          <img src="assets/img/nn/logo.png" alt="">
+          <!-- <h1 class="sitename">Pearl Medical</h1> -->
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -47,7 +47,7 @@
             <li><a href="#hero" class="active">Home<br></a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
-            <li><a href="#departments">Solutions</a></li>
+            <li><a href="#departments">Products</a></li>
             <li><a href="#doctors">Team</a></li>           
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -125,7 +125,7 @@
         <div class="row gy-4 gx-5">
 
           <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/nn/about1.jpg" class="img-fluid" alt="">
             <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"></a> -->
 
             <h4 style="margin-top:25px; font-weight: 600; font-family: var(--heading-font);">Key Focus Areas</h4>
@@ -292,7 +292,7 @@
                 <i class="fas fa-notes-medical"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Local communities</h3>
+                <h3>Community outreach</h3>
               </a>             
             </div>
           </div><!-- End Service Item -->
@@ -351,7 +351,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Our Core Solutions</h2>        
+        <h2>Our Products</h2>        
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -384,7 +384,7 @@
                     </p>                   
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/departments-1.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/nn/2.JPG" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -422,7 +422,7 @@
                     </p>                    
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/nn/2.JPG" alt="" class="img-fluid">
+                    <img src="assets/img/nn/traning.jpeg" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -444,15 +444,28 @@
 
       <div class="container">
 
-        <div class="row gy-4">
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4" >
+          <div class="col-lg-2" data-aos="fade-up" data-aos-delay="100">
+            
+          </div><!-- End Team Member -->  
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/doctors/doctors-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/nn/ceo1.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Medical Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                <h4>ICHOR LUKE LUPER</h4>
+                <span>CEO/CO-FOUDNER</span>
+                <p>Ichor Luke is a visionary Biochemist and Biomedical Engineer with
+                  over six years of experience in the biomedical and healthcare
+                  sectors. As the first African recipient of the Lead 2030 challenge by
+                  One Young World under SDG 12, he has demonstrated his
+                  commitment to driving sustainable development through
+                  innovative solutions. Passionate about revolutionizing healthcare
+                  waste management, he co-founded Pearl Medical, where he leads
+                  with unwavering dedication. Luke's pioneering work has garnered
+                  global recognition, showcasing his ability to make a meaningful
+                  impact on a large scale. With a track record of excellence and a
+                  vision for a healthier, more sustainable future, he continues to
+                  inspire change and drive innovation in the healthcare industry.</p>
                 <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -461,61 +474,11 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/doctors/doctors-2.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Anesthesiologist</span>
-                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""> <i class="bi bi-linkedin"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
-            <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/doctors/doctors-3.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>Cardiology</span>
-                <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""> <i class="bi bi-linkedin"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/doctors/doctors-4.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Neurosurgeon</span>
-                <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""> <i class="bi bi-linkedin"></i> </a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
+          </div><!-- End Team Member -->        
+          <div class="col-lg-2" data-aos="fade-up" data-aos-delay="100">           
+          </div><!-- End Team Member -->  
         </div>
-
+        
       </div>
 
     </section><!-- /Doctors Section -->
@@ -736,24 +699,16 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/nn/1.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/nn/1.JPG" alt="" class="img-fluid">
+              <a href="assets/img/nn/1.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/nn/1.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/nn/3.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/nn/3.JPG" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div><!-- End Gallery Item -->
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/nn/3.JPG" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/nn/3.JPG" alt="" class="img-fluid">
+              <a href="assets/img/nn/3.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/nn/3.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -768,32 +723,40 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/nn/4.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/nn/4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/nn/2.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/nn/2.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/nn/4.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/nn/4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/nn/9.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/nn/9.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/nn/4.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/nn/4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/nn/6.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/nn/6.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/nn/4.jpg" class="glightbox" data-gallery="images-gallery">
-                <img src="assets/img/nn/4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/nn/7.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/nn/7.jpg" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div><!-- End Gallery Item -->
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/nn/8.jpg" class="glightbox" data-gallery="images-gallery">
+                <img src="assets/img/nn/8.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div><!-- End Gallery Item -->
@@ -816,7 +779,8 @@
       </div><!-- End Section Title -->
 
       <div class="mb-5" data-aos="fade-up" data-aos-delay="200">
-        <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3931.129778376611!2d8.89779241630209!3d9.839465994052466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x105375d4458b9041%3A0xe59bb8a90d223462!2sTadow%20House!5e0!3m2!1sen!2sng!4v1764178109113!5m2!1sen!2sng" style="border:0; width: 100%; height: 270px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <!-- <iframe style="border:0; width: 100%; height: 270px;" src="" frameborder="0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       </div><!-- End Google Maps -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -828,7 +792,8 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Location</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>No 75 1st floor tadow house,</p>
+                <p>Rayfield, Nigeria, PMB 930103</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -836,7 +801,7 @@
               <i class="bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+234 8066768683</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -844,7 +809,7 @@
               <i class="bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>pearlmedical4@gmail.com</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -899,10 +864,10 @@
             <span class="sitename">Pearl Medical</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>No 75 1st floor tadow house,</p>
+            <p>Rayfield, Nigeria, PMB 930103</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+234 8066768683</span></p>
+            <p><strong>Email:</strong> <span>pearlmedical4@gmail.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">            
             <a href="https://facebook.com/profile.php?id=61554253927516"><i class="bi bi-facebook"></i></a>
