--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <style>
+    .doctors .team-member .pic {
+      overflow: hidden;
+      width: 150px;
+      border-radius: 10%;
+      flex-shrink: 0;
+      margin-top: 75px;
+    }
+  </style>
 
 </head>
 
