updated ceo profile

--- a/index.html
+++ b/index.html
@@ -463,23 +463,17 @@
               <div class="member-info">
                 <h4>ICHOR LUKE LUPER</h4>
                 <span>CEO/CO-FOUDNER</span>
-                <p>Ichor Luke is a visionary Biochemist and Biomedical Engineer with
-                  over six years of experience in the biomedical and healthcare
-                  sectors. As the first African recipient of the Lead 2030 challenge by
-                  One Young World under SDG 12, he has demonstrated his
-                  commitment to driving sustainable development through
-                  innovative solutions. Passionate about revolutionizing healthcare
-                  waste management, he co-founded Pearl Medical, where he leads
-                  with unwavering dedication. Luke's pioneering work has garnered
-                  global recognition, showcasing his ability to make a meaningful
-                  impact on a large scale. With a track record of excellence and a
-                  vision for a healthier, more sustainable future, he continues to
-                  inspire change and drive innovation in the healthcare industry.</p>
+                <p>Ichor Luke is a Public Health Specialist with over six years 
+                  of experience in the biomedical and healthcare sectors. As the first 
+                  African recipient of the Lead 2030 for SDG 12, he has demonstrated 
+                  his commitment to driving sustainable development through innovative solutions. 
+                  With a track record of excellence and a vision for a healthier, more sustainable future, 
+                  he continues to inspire change and drive innovation in the healthcare industry.</p>
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""> <i class="bi bi-linkedin"></i> </a>
+                  <a href="https://x.com/LukeIchor30?t=WSwB1bcr88qQJxYM8Lp5WA&s=09"><i class="bi bi-twitter-x"></i></a>
+                  <a href="https://www.facebook.com/share/17p5zMnvde/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/dr_saint_luke?igsh=anBjbGk5a3Y3OXB1"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/luke-ichor-135952103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> <i class="bi bi-linkedin"></i> </a>
                 </div>
               </div>
             </div>
