--- a/index.html
+++ b/index.html
@@ -581,8 +581,8 @@
                     <div class="d-flex">
                       <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
-                        <h3>Saul Goodman</h3>
-                        <h4>Ceo &amp; Founder</h4>
+                        <h3>One Young World Leadership</h3>
+                        <h4>Team</h4>
                         <div class="stars">
                           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                         </div>
@@ -590,7 +590,12 @@
                     </div>
                     <p>
                       <i class="bi bi-quote quote-icon-left"></i>
-                      <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                      <span>Pearl Medical Ltd represents the kind of bold, impact-driven innovation our world urgently needs.
+                         As a Lead2030 SDG12 Winner, Luke Ichor and his team have demonstrated exceptional leadership
+                          in tackling one of Africa’s most pressing environmental health challenges medical waste mismanagement.
+                           Their integration of sustainable technologies with community-centered engagement sets a new benchmark for
+                            social enterprises across the region. Pearl Medical’s results are not only measurable, but transformative,
+                             making them a model for scalable climate and public health solutions.</span>
                       <i class="bi bi-quote quote-icon-right"></i>
                     </p>
                   </div>
@@ -601,8 +606,8 @@
                     <div class="d-flex">
                       <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
-                        <h3>Sara Wilsson</h3>
-                        <h4>Designer</h4>
+                        <h3>Bristol Myers Squibb Foundation</h3>
+                        <h4>Program Officer</h4>
                         <div class="stars">
                           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                         </div>
@@ -610,7 +615,11 @@
                     </div>
                     <p>
                       <i class="bi bi-quote quote-icon-left"></i>
-                      <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                      <span>The Bristol Myers Squibb Foundation is proud to recognize Pearl Medical Ltd for its commitment to strengthening 
+                        healthcare systems in underserved communities. Their eco-friendly incineration technology and AI-powered waste
+                         monitoring tools are filling critical gaps in infection prevention and environmental safety. The training provided to 
+                         healthcare workers demonstrates their dedication to long-term capacity building. Pearl Medical’s approach is practical, evidence-based, 
+                        and aligned with global standards, making them a valuable partner in improving public health outcomes.</span>
                       <i class="bi bi-quote quote-icon-right"></i>
                     </p>
                   </div>
@@ -621,8 +630,8 @@
                     <div class="d-flex">
                       <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
-                        <h3>Jena Karlis</h3>
-                        <h4>Store Owner</h4>
+                        <h3>Dr Terungwa Hwande</h3>
+                        <h4>Medical Director, BSUTH Makurdi</h4>
                         <div class="stars">
                           <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                         </div>
@@ -630,52 +639,16 @@
                     </div>
                     <p>
                       <i class="bi bi-quote quote-icon-left"></i>
-                      <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                      <span>Pearl Medical Ltd has been a vital partner in supporting our hospital’s waste management and infection control efforts. 
+                        Their innovative waste handling systems, capacity-building programs, and technical support have significantly improved our compliance 
+                        with national and WHO standards. We have seen a measurable reduction in risks to patients, staff, and the surrounding community.
+                         The professionalism and dedication of the Pearl Medical team are commendable. I highly recommend their solutions 
+                        to any healthcare facility seeking safer, more efficient, and environmentally responsible waste management.</span>
                       <i class="bi bi-quote quote-icon-right"></i>
                     </p>
                   </div>
                 </div><!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-item">
-                    <div class="d-flex">
-                      <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img flex-shrink-0" alt="">
-                      <div>
-                        <h3>Matt Brandon</h3>
-                        <h4>Freelancer</h4>
-                        <div class="stars">
-                          <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                        </div>
-                      </div>
-                    </div>
-                    <p>
-                      <i class="bi bi-quote quote-icon-left"></i>
-                      <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
-                      <i class="bi bi-quote quote-icon-right"></i>
-                    </p>
-                  </div>
-                </div><!-- End testimonial item -->
-
-                <div class="swiper-slide">
-                  <div class="testimonial-item">
-                    <div class="d-flex">
-                      <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img flex-shrink-0" alt="">
-                      <div>
-                        <h3>John Larson</h3>
-                        <h4>Entrepreneur</h4>
-                        <div class="stars">
-                          <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                        </div>
-                      </div>
-                    </div>
-                    <p>
-                      <i class="bi bi-quote quote-icon-left"></i>
-                      <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
-                      <i class="bi bi-quote quote-icon-right"></i>
-                    </p>
-                  </div>
-                </div><!-- End testimonial item -->
-
+              
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -796,7 +769,7 @@
               <div>
                 <h3>Location</h3>
                 <p>No 75 1st floor tadow house,</p>
-                <p>Rayfield, Nigeria, PMB 930103</p>
+                <p>Rayfield Jos , Nigeria, PMB 930103</p>
               </div>
             </div><!-- End Info Item -->
 
@@ -868,7 +841,7 @@
           </a>
           <div class="footer-contact pt-3">
             <p>No 75 1st floor tadow house,</p>
-            <p>Rayfield, Nigeria, PMB 930103</p>
+            <p>Rayfield Jos, Nigeria, PMB 930103</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+234 8066768683</span></p>
             <p><strong>Email:</strong> <span>pearlmedical4@gmail.com</span></p>
           </div>
