updated hero section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="welcome position-relative" data-aos="fade-down" data-aos-delay="100">
           <h2>WELCOME TO PEARL MEDICAL</h2>
-          <p style="color:#fff;">We envision a future where every healthcare facility has access to reliable and efficient waste</p>
+          <p style="color:#fff;">We envision a future where every healthcare facility has access to reliable and efficient waste management</p>
         </div><!-- End Welcome -->
 
         <div class="content row gy-4">
