updated why our work matters

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="why-box" data-aos="zoom-out" data-aos-delay="200">
               <h3 style="font-size: 30px;">Why Our work Matters</h3>
               <p style="font-size: 18px;">
-                Every year, millions of Nigerians especially women, children, and health workers are exposed to infections, toxic fumes, and polluted water due to unsafe medical waste disposal. Pearl Medical reduces these risks by providing safe infrastructure, climate-smart innovations, and training that strengthen public health systems while protecting the environment.
+                Millions of People across the globe especially women, children, and health workers are exposed to infections, toxic fumes, and polluted water due to unsafe medical waste disposal. Pearl Medical reduces these risks by providing safe infrastructure, climate-smart innovations, and training that strengthen public health systems while protecting the environment.
               </p>              
             </div>
           </div><!-- End Why Box -->
