--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-item">
                     <div class="d-flex">
-                      <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <!-- <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                       <div>
                         <h3>One Young World Leadership</h3>
                         <h4>Team</h4>
@@ -604,7 +604,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-item">
                     <div class="d-flex">
-                      <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <!-- <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                       <div>
                         <h3>Bristol Myers Squibb Foundation</h3>
                         <h4>Program Officer</h4>
@@ -628,7 +628,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-item">
                     <div class="d-flex">
-                      <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <!-- <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt=""> -->
                       <div>
                         <h3>Dr Terungwa Hwande</h3>
                         <h4>Medical Director, BSUTH Makurdi</h4>
